@@ -1,5 +1,7 @@
 0.3 (UNRELEASED)
 ----------------
+Compatibility break: Changes command line syntax of umockdev-record.
+
 - Emulate SUBSYSTEM=tty mocked device nodes as PTYs instead of plain files, so
   that they behave tty-like and respond to the relevant ioctls.
   (first part of issue #9)
@@ -7,6 +9,10 @@
   descriptor for simulated tty devices (and possibly other kinds of devices in
   the future), so that a test suite can communicate with clients that connect
   to the simulated tty device node. (second part of issue #9)
+- Change umockdev-record's --ioctl option: The argument is now
+  "devicefile=outputfile" like with umockdev-run, instead of specifying the
+  device as the first positional argument. This was inconsistant, and is
+  necessary to support other kinds of recording in the future.
 
 0.2.11 (2013-07-03)
 -------------------
